--- a/releases/v0.1.md
+++ b/releases/v0.1.md
@@ -1,3 +1,3 @@
-## BladeRunnerJS v0.1 ##
-  - the initial release of BladeRunnerJS
-  - see http://bladerunnerjs.org/blog/bladerunnerjs-v0-1-released/ for the release announcement
+## BladeRunnerJS @tagVersion@
+- the initial release of BladeRunnerJS
+- see http://bladerunnerjs.org/blog/bladerunnerjs-v0-1-released/ for the release announcement
