--- a/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/i18n/src/br/i18n/zh_TW.properties
+++ b/cutlass-sdk/workspace/sdk/libs/javascript/br-libs/i18n/src/br/i18n/zh_TW.properties
@@ -1,6 +1,4 @@
-﻿br.i18n.time.format.separator=:
-
-br.i18n.date.format=Y年m月d日
+﻿br.i18n.date.format=Y年m月d日
 br.i18n.date.format.long=D, Y年m月d日, A h:i:s
 
 br.i18n.date.am=上午
