adding release notes for 0.4

--- a/releases/v0.4.md
+++ b/releases/v0.4.md
@@ -1,1 +1,20 @@
 ## BladeRunnerJS @tagVersion@
+- Our first major milestone
+- NodeJS style App source code support
+- Improved BRJS model and plugin interfaces
+- The BRJS model now uses the Java7 File Watcher Service to enabled caching and minimise the amount of dependency analysis that has to be executed
+- The `CompositeBundler` plugin now allows both NamespacedJS and NodeJS style source code to be used in the same App
+- `CSSBundler` plugin uses the new BRJS model
+- `XMLBundler` and `HTMLBundler` changed to use the new model and plugin interfaces
+- Basic support for NodeJS libraries
+- Integrated JSTestDriver to use the new BRJS model to generate test bundles
+- A number of other bug fixes and minor improvements
+
+### Known Issues
+- Some test suites are failing in IE8
+- CPU usage issues when BRJS server is left running for a prolonged period of time
+  - **Workaround:** Restart the BRJS server once every 30-60 minutes
+- The `CSSResource` plugin is not fully implemented. As a result images are not available in workbenches and exports WARs.
+  - **Workaround:** Images can be referenced using an absolute URL to load them directly from disk rather than via the BRJS 'bundling' mechanism
+- Due to the latency of the File Watch Service it can sometimes take several seconds for changes to be files to be picked up when a page is refreshed
+  - **Workaround:** Either wait a few seconds and refresh the page again, or if you're in a hurry just restart the BRJS server
