tweaks to 0.4 release notes

--- a/releases/v0.4.md
+++ b/releases/v0.4.md
@@ -1,5 +1,8 @@
 ## BladeRunnerJS @tagVersion@
-- Our first major milestone
+Our first major milestone containing a number of bug fixes, improvements and new features.
+
+Release highlights include:
+
 - NodeJS style App source code support
 - Improved BRJS model and plugin interfaces
 - The BRJS model now uses the Java7 File Watcher Service to enabled caching and minimise the amount of dependency analysis that has to be executed
@@ -11,10 +14,13 @@
 - A number of other bug fixes and minor improvements
 
 ### Known Issues
-- Some test suites are failing in IE8
+- Due to some EcmaScript5 uses BRJS does not currently support IE8
+  - **Workaround:** There is no workaround but this is something we will fix in the near future
 - CPU usage issues when BRJS server is left running for a prolonged period of time
   - **Workaround:** Restart the BRJS server once every 30-60 minutes
 - The `CSSResource` plugin is not fully implemented. As a result images are not available in workbenches and exports WARs.
   - **Workaround:** Images can be referenced using an absolute URL to load them directly from disk rather than via the BRJS 'bundling' mechanism
-- Due to the latency of the File Watch Service it can sometimes take several seconds for changes to be files to be picked up when a page is refreshed
+- Due to the latency of the File Watch Service on OSX it can sometimes take several seconds for changes to files to be picked up when a page is refreshed
   - **Workaround:** Either wait a few seconds and refresh the page again, or if you're in a hurry just restart the BRJS server
+- Due to a [bug in Java]((http://bugs.java.com/bugdatabase/view_bug.do?bug_id=8029516)), the JVM can occasionally crash on Windows when BRJS attempts to close File Watchers.
+  - **Workaround:** Unfortunately there is no workaround. Oracle are aware of the issue and we will also be making changes to aleviate the issue in a future release
