updating release note md file as we've made improvements to our commands/flags and done some re-naming

--- a/releases/v0.5.md
+++ b/releases/v0.5.md
@@ -10,9 +10,9 @@ Improved test execution stability, dependency debugging and restored IE8 support
 
 ### New Dependency Analysis Commands
 ```
-brjs aspect-deps <appName> [<aspect>]
-brjs workbench-deps <appName> <bladeset> [<aspect>]
-brjs dep-insight <app> <require-path> [<aspect>] [-a]
+app-deps <app> [<aspect>] [-A|--all]
+workbench-deps <app> <bladeset> <blade>
+dep-insight <app> <require-path> [<aspect>] [-p|--prefix] [-a|--alias] [-A|--all]
 ```
 For further details see [this wiki page](https://github.com/BladeRunnerJS/brjs/wiki/Peering-in-to-the-bundling-black-box)
 
