--- a/releases/v0.6.md
+++ b/releases/v0.6.md
@@ -1,14 +1,14 @@
 ## BladeRunnerJS @tagVersion@
 - The JS bundler now ignores any dependencies defined in Javascript comments (#309)
 - Added a new dependency analysis command `bundle-deps <bundlable-dir>` to analyse dependencies for any given 'bundlable' directory, see [here](https://github.com/BladeRunnerJS/brjs/wiki/Debugging-your-application-dependencies#brjs-bundle-deps) for details
-- BRJS now makes use of linked HashMaps to guarantee that the bundling ordering is deterministic and the is same each time when generated (#474)
-- Improved error feedback from library.manifest file contents so that we can fail-fast (#372)
+- BRJS now makes use of linked HashMaps to guarantee that the bundling ordering is deterministic and the same each time (#474)
+- Improved error feedback when reading library.manifest contents. Exceptions are now thrown if files or dependency libraries don't exist (#372)
 - Fixed an issue where other libraries were being included before BRJS bootstrap (#471)
 - Plugins now have the ability to define their order relative to other plug-ins in the BRJS system through the introduction of an `OrderedPlugin` interface (#461)
 - Aliases can now be referenced within XML tags and have their dependencies bundled (#479)
 
 ### Known Issues
-- CPU usage issues when BRJS server is left running for a prolonged period of time
+- CPU usage issues when BRJS server is left running for a prolonged period of time. This appears to be an OSX only issue.
   - **Workaround:** Restart the BRJS server once every 30-60 minutes
 - The `CSSResource` plugin is not fully implemented. As a result images are not available in workbenches.
   - **Workaround:** Images can be referenced using an absolute URL to load them directly from disk rather than via the BRJS 'bundling' mechanism
