minor changes to v0.7 release notes

--- a/releases/v0.7.md
+++ b/releases/v0.7.md
@@ -1,19 +1,31 @@
 ## BladeRunnerJS @tagVersion@
-- Fixed export-app command (#508)
-- Improvements to the JsTestDriver config options for all bundlers
-- Fixed several dependency-caching bugs
+- Major performance enhancements
+  - Initial bundle load time is up to 25% faster compared to v0.6, subsequent load times are up to 100% faster compared to v0.6
+- `export-app` command now works (#508)
+- Fixed several minor bugs around caching of SourceModule dependecies
 - Several other minor bug fixes
 - Improvements to the Spec Test API
+- Additional API method to return named AssetLocations from an AssetContainer
 
 ### Compatibility Issues
-- All JsTestDriver.conf files in existing applications need to update their plugin config for the 'module' value:
+
+##### jsTestDriver Module Renamed
+
+The classpath for the JSTestDriver plugin module has changed.
+
+All JsTestDriver.conf files in existing applications need to be updated to use `org.bladerunnerjs.jstestdriver.BRJSBundleHandler` as the module classname rather than `com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin`. This can be fixed with a simple find and replace on all jsTestDriver.conf files.
+
+Previous plugin definition:
+
 ```
 plugin:
   - name: "BundleInjector"
     jar: ../../../../sdk/libs/java/testRunner/js-test-driver-bundler-plugin.jar
     module: com.caplin.jstestdriver.plugin.CutlassBundleInjectorPlugin
-```
-To
+```  
+
+Updated plugin definition:
+
 ```
 plugin:
   - name: "BundleInjector"
