--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -3,6 +3,24 @@
 
 ### Compatibility Issues
 
+##### CommandPlugin `doCommand()` return type changed from `void` to `int`
+This affects all existing `CommandPlugin` implementations, we've made this change because it gives the command control
+over the exit code for a command, specifically for when launching other processes.
+
+There may be instances where as far as a Command Plugin is concerned, it's run successfully but the process it launched has thrown an exception.
+We wanted to cater for this so that the `doCommand()` can simply return the exit code from the process it launched.
+
+Any existing plugins will need to update their code to look like this:
+
+```
+@Override
+public int doCommand(String... args)
+{
+	// your command logic
+	return 0;
+}
+```
+
 ##### js-test-driver plugin requires no config
 
 `jsTestDriver.conf` files no longer need plugin definition blocks for the BladeRunnerJS bundlers #41.
