Adding backward compatibility issues to the release notes before we forget about them

--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -21,6 +21,24 @@ public int doCommand(String... args)
 }
 ```
 
+#### bladerunner-dev-filters have been removed
+Previously created applications will have a web.xml file with the following contents:
+```
+ 	<filter>
+ 		<filter-name>bladerunner-dev-filters</filter-name>
+ 		<filter-class>com.caplin.cutlass.filter.BladerunnerDevFilters
+ 		</filter-class>
+ 	</filter>
+ 	<filter-mapping>
+ 		<filter-name>bladerunner-dev-filters</filter-name>
+ 		<url-pattern>/*</url-pattern>
+ 		<dispatcher>REQUEST</dispatcher>
+ 		<dispatcher>FORWARD</dispatcher>
+ 	</filter-mapping>
+```
+
+This will now need to be removed to prevent class load errors on startup.
+
 ##### js-test-driver plugin requires no config
 
 `jsTestDriver.conf` files no longer need plugin definition blocks for the BladeRunnerJS bundlers #41.
