Updating release note formatting

--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -3,7 +3,7 @@
 
 ### Compatibility Issues
 
-##### CommandPlugin `doCommand()` return type changed from `void` to `int`
+#### 1. CommandPlugin `doCommand()` return type changed from `void` to `int`
 This affects all existing `CommandPlugin` implementations, we've made this change because it gives the command control
 over the exit code for a command, specifically for when launching other processes.
 
@@ -21,7 +21,7 @@ public int doCommand(String... args)
 }
 ```
 
-#### bladerunner-dev-filters have been removed
+#### 2. bladerunner-dev-filters have been removed
 Previously created applications will have a web.xml file with the following contents:
 ```
  	<filter>
@@ -39,7 +39,7 @@ Previously created applications will have a web.xml file with the following cont
 
 This will now need to be removed to prevent class load errors on startup.
 
-##### js-test-driver plugin requires no config
+##### 3. js-test-driver plugin requires no config
 
 `jsTestDriver.conf` files no longer need plugin definition blocks for the BladeRunnerJS bundlers #41.
 This causes a backward compatibility issue for existing `jsTestDriver.conf` files, which will now need the following config snippet removed:
