Updating release notes with some recent changes/compatibility issues

--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -1,5 +1,7 @@
 ## BladeRunnerJS @tagVersion@
-- TBC
+- Closure Compiler minification jar has been updated to the latest version (v20140407)
+- Fixed directory deletion issues when attempting to create a WAR file
+- Several other bug fixes
 
 ### Compatibility Issues
 
@@ -51,6 +53,14 @@ plugin:
     module: org.bladerunnerjs.jstestdriver.BRJSBundleHandler
 ```
 
+#### Removal of presenter component alias
+
+The `br.presenter-component` alias has been removed from the BRJS library aliases.
+
+```
+<alias name="br.presenter-component" defaultClass="br.presenter.PresenterComponentFactory" />
+```
+
 ### Known Issues
 - CPU usage issues when BRJS server is left running for a prolonged period of time. This appears to be an OSX only issue.
   - **Workaround:** Restart the BRJS server once every 30-60 minutes
@@ -58,3 +68,5 @@ plugin:
   - **Workaround:** Images can be referenced using an absolute URL to load them directly from disk rather than via the BRJS 'bundling' mechanism
 - Due to the latency of the File Watch Service on OSX it can sometimes take several seconds for changes to files to be picked up when a page is refreshed
   - **Workaround:** Either wait a few seconds and refresh the page again, or if you're in a hurry just restart the BRJS server
+
+
