Changing the version of Closure Compiler so that it's guava dependency plays more nicely with other external plugins for the time being.

--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -1,6 +1,6 @@
 ## BladeRunnerJS @tagVersion@
-- Closure Compiler minification jar has been updated to the latest version (v20140407)
 - Fixed directory deletion issues when attempting to create a WAR file
+- Closure Compiler jar has been updated to version 'v20130823'
 - Several other bug fixes
 
 ### Compatibility Issues
