--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -5,7 +5,39 @@
 
 ### Compatibility Issues
 
-#### 1. CommandPlugin `doCommand()` return type changed from `void` to `int`
+#### 1. `AssetPlugin` interface simplified
+A number of simplifications were made to the `AssetPlugin` interface to simplify the job of plug-in developers, and to improve BRJS performance.
+These are as follows:
+
+  * Plug-ins no longer need separate methods for each type of asset as the calling method now uses `instanceof` checks to differentiate.
+  * Plug-ins are no longer responsible for ensuring that the same object instance is returned each time the same file is encountered.
+  * Plug-ins are no longer responsible for ensuring the right thing happens whether the asset-location is deep or shallow.
+  * Plug-ins are no longer under pressure to use the awkward `AssetLocation.obtainMatchingAssets()` method to help with the problems described above.
+
+
+#### 2. `AssetLocationPlugin` interface capabilities improved.
+The following improvements have been made to the `AssetLocationPlugin` interface:
+
+  * Plug-ins are no longer responsible for ensuring that the same object instance is returned each time the same file is encountered.
+  * Plug-ins are now able to augment the asset locations provided by some other asset-location plug-in.
+  * Plug-ins are now able to define 'seed' asset-locations; seed asset-locations within a bundlable asset-container are used to kick-start the bundling process.
+
+
+#### 3. `AbstractPlugin` classes now provide default implementations for the `OrderedPlugin` interface
+`OrderedPlugin` implementations that extend one of the `AbstractPlugin` specializations no longer need to implement `getPluginsThatMustAppearBeforeThisPlugin()`
+or `getPluginsThatMustAppearAfterThisPlugin()` only to return an empty list.
+
+
+#### 4. `AssetLocation` interface improved
+The following improvements have been made to the `AssetLocation` interface:
+
+  * The `namespace()` method has been removed since the fully qualified namespace can always be determined by mechanically converting the require path.
+  * The `obtainAsset()` and `obtainMatchingAssets()` methods have been removed now that the `AssetPlugin` interface has been simplified.
+  * The method names have been modifed to make their intention clearer.
+  * The `AbstractAssetLocation` implementation (and sub-classes) have been cleaned-up based on these interface changes.
+
+
+#### 5. `CommandPlugin.doCommand()` return type changed from `void` to `int`
 This affects all existing `CommandPlugin` implementations, we've made this change because it gives the command control
 over the exit code for a command, specifically for when launching other processes.
 
@@ -23,7 +55,7 @@ public int doCommand(String... args)
 }
 ```
 
-#### 2. bladerunner-dev-filters have been removed
+#### 6. bladerunner-dev-filters have been removed
 Previously created applications will have a web.xml file with the following contents:
 ```
  	<filter>
@@ -41,7 +73,8 @@ Previously created applications will have a web.xml file with the following cont
 
 This will now need to be removed to prevent class load errors on startup.
 
-##### 3. js-test-driver plugin requires no config
+
+##### 7. js-test-driver plugin requires no config
 
 `jsTestDriver.conf` files no longer need plugin definition blocks for the BladeRunnerJS bundlers #41.
 This causes a backward compatibility issue for existing `jsTestDriver.conf` files, which will now need the following config snippet removed:
