correcting minor typo and formatting

--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -33,7 +33,7 @@ The following improvements have been made to the `AssetLocation` interface:
 
   * The `namespace()` method has been removed since the fully qualified namespace can always be determined by mechanically converting the require path.
   * The `obtainAsset()` and `obtainMatchingAssets()` methods have been removed now that the `AssetPlugin` interface has been simplified.
-  * The method names have been modifed to make their intention clearer.
+  * The method names have been modified to make their intention clearer.
   * The `AbstractAssetLocation` implementation (and sub-classes) have been cleaned-up based on these interface changes.
 
 
@@ -74,7 +74,7 @@ Previously created applications will have a web.xml file with the following cont
 This will now need to be removed to prevent class load errors on startup.
 
 
-##### 7. js-test-driver plugin requires no config
+#### 7. js-test-driver plugin requires no config
 
 `jsTestDriver.conf` files no longer need plugin definition blocks for the BladeRunnerJS bundlers #41.
 This causes a backward compatibility issue for existing `jsTestDriver.conf` files, which will now need the following config snippet removed:
