--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -1,6 +1,7 @@
 ## BladeRunnerJS @tagVersion@
 - Fixed directory deletion issues when attempting to create a WAR file
 - Closure Compiler jar has been updated to version 'v20130823'
+- Fixed bugs relating to new files not being picked up by the bundling process
 - Several other bug fixes
 
 ### Compatibility Issues
