--- a/releases/v0.8.md
+++ b/releases/v0.8.md
@@ -1,13 +1,13 @@
 ## BladeRunnerJS @tagVersion@
-- Fixed directory deletion issues when attempting to create a WAR file
+- Fixed directories being locked by the file system when attempting to create a WAR file
 - Closure Compiler jar has been updated to version 'v20130823'
-- Fixed bugs relating to new files not being picked up by the bundling process
+- Fixed bugs relating to new files not being detected by the bundling process
 - Several other bug fixes
 
 ### Compatibility Issues
 
 #### 1. `AssetPlugin` interface simplified
-A number of simplifications were made to the `AssetPlugin` interface to simplify the job of plug-in developers, and to improve BRJS performance.
+Changes were made to the `AssetPlugin` interface to simplify the job of plug-in developers and to improve BRJS performance.
 These are as follows:
 
   * Plug-ins no longer need separate methods for each type of asset as the calling method now uses `instanceof` checks to differentiate.
@@ -57,7 +57,7 @@ public int doCommand(String... args)
 ```
 
 #### 6. bladerunner-dev-filters have been removed
-Previously created applications will have a web.xml file with the following contents:
+Previously created applications will have a `WEB-INF/web.xml` file with the following contents:
 ```
  	<filter>
  		<filter-name>bladerunner-dev-filters</filter-name>
@@ -97,10 +97,10 @@ The `br.presenter-component` alias has been removed from the BRJS library aliase
 
 ### Known Issues
 - CPU usage issues when BRJS server is left running for a prolonged period of time. This appears to be an OSX only issue.
-  - **Workaround:** Restart the BRJS server once every 30-60 minutes
+  - **Workaround:** Restart the BRJS server if you see the CPU spike.
 - The `CSSResource` plugin is not fully implemented. As a result images are not available in workbenches.
   - **Workaround:** Images can be referenced using an absolute URL to load them directly from disk rather than via the BRJS 'bundling' mechanism
 - Due to the latency of the File Watch Service on OSX it can sometimes take several seconds for changes to files to be picked up when a page is refreshed
-  - **Workaround:** Either wait a few seconds and refresh the page again, or if you're in a hurry just restart the BRJS server
+  - **Workaround:** Either wait a few seconds and refresh the page again, or restart the BRJS server
 
 
