Updated the release notes to inform people about the need to either update 'WEB-INF' or delete it entirely for old apps.

--- a/releases/v0.9.md
+++ b/releases/v0.9.md
@@ -22,6 +22,7 @@
 
 This has had the following side effects:
 
+  * The contents of the 'WEB-INF' directory within each app has changed, and is no longer strictly necessary anyway. You will either need to create a new app and replace the 'WEB-INF' directory with the one from the new app, or just delete the directory entirely if you are not relying on any J2EE features.
   * The BRJS model is no longer used in production, and instead a separate servlet responsible solely for setting the `Cache-Control` and `Content-Type` headers is used in production, requiring changes to each applications 'WEB-INF/web.xml' file.
   * The URLs that the BRJS server responds to are now completely logical, and have no representation to any of the underlying files on disk; this should not require any changes to existing applications unless use has been made of the `unbundled-resources` directory, since all requests to content plug-ins are mediated by tag-handlers, which have also been updated to use the new URLs.
   * The locale forwarding that used to be written in Java and executed on the server-side, has now instead been implemented in JavaScript, and is executed on the client-side, as a result of which, the logic is not quite as good as it used to be except when running on the latest versions of Firefox, and may instead cause users to be directed to the default language page, even when a suitable translation is actually available.
