Updated the release notes to inform people about our decision to diable the 'import-app' and 'export-app' commands.

--- a/releases/v0.9.md
+++ b/releases/v0.9.md
@@ -63,3 +63,9 @@ Since the class-names and require-paths are freely convertible between each othe
 #### 7. `ContentPlugin.getGroupName()` method renamed to `ContentPlugin.getCompositeGroupName()`
 
 This has been done to make its purpose clearer now that we no longer create static bundles for content plug-ins that provide a non `null` return value for this method.
+
+
+#### 8. The 'import-app' and 'export-app' commands have been temporarily disabled 
+
+Because the 'import-app' command has not yet been modified to use the BRJS model, it no longer works due to underlying changes we've recently made. We have therefore taken the decision to disable both of these commands until they can both be used again.
+
