more styling improvements for the blade template

--- a/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/i18n/en.properties
+++ b/cutlass-sdk/build-resources/includes/sdk/templates/blade-template/resources/i18n/en.properties
@@ -1,1 +1,2 @@
-@appns.@bladeset.@blade.hello.world="Hello from the @bladeTitle Blade"
+@appns.@bladeset.@blade.hello.world=Hello from the @bladeTitle Blade
+@appns.@bladeset.@blade.button.click.message=Click the button below to log to the EventHub
