updating release notes with changes to war command

--- a/releases/v0.9.md
+++ b/releases/v0.9.md
@@ -30,22 +30,32 @@ This has had the following side effects:
   * Plug-in developers no longer need to copy their classes into the 'WEB-INF/lib' directories of the various applications when testing plug-ins.
 
 
-#### 2. All app libraries are now placed together within a single directory.
+#### 2. The `war` command has been replaced by the `build-app` command.
+
+The `build-app` command by default allows apps to be deployed as a set of static files, but a WAR file can now be created by typing `./brjs build-app -w <app>`.
+
+
+#### 3. The `SourceModule.getClassname()` method has been deleted.
+
+Since the class-names and require-paths are freely convertible between each other by replacing dots with slashes, it's no longer a requirement for `SourceModule` to provide a method for what can be done internally by the model.
+
+
+#### 4. All app libraries are now placed together within a single directory.
 
 As a consequence, and to help deal with any confusion this might cause, the library configuration files have been renamed to make it clearer which library type is which. Specifically, the 'br.manifest' file has been renamed to 'br-lib.conf', and the 'library.manifest' has been renamed to 'thirdparty-lib.manifest'.
 
 
-#### 3. The `war` command has been replaced by the `build` command.
-
-The `build` command by default allows apps to be deployed as a set of static files, but a WAR file can now be created by typing `build -w <app>`.
-
-
-#### 4. `APP.VERSION` is no longer required.
+#### 5. `APP.VERSION` is no longer required.
 
 As a result of moving to a new set of logical URLs, as part of the static file deployment work, there is no longer a requirement to either define a `<base/>` tag that includes `APP.VERSION`, or define `APP.VERSION` within an `<env-entry/>` tag in the 'web.xml' file.
 
 
-#### 5. Requests to `unbundled-resources` are now at a different URL.
+#### 6. `ContentPlugin.getGroupName()` method renamed to `ContentPlugin.getCompositeGroupName()`
+
+This has been done to make its purpose clearer now that we no longer create static bundles for content plug-ins that provide a non `null` return value for this method.
+
+
+#### 7. Requests to `unbundled-resources` are now at a different URL.
 
 Because requests to `unbundled-resources` weren't previously performed using either a tag-handler or a service, there were breakages when the underlying request paths changed. Applications that make use of `unbundled-resources` will need to make changes to fix these breakages.
 
@@ -53,19 +63,3 @@ To ensure this doesn't happen in the future we've now introduced the following m
 
   * There is now a `<@bundle.path@/>` tag that can be used as a prefix for any bundle requests (e.g. `<script src="<@bundle.path@/>/unbundled-resources/my-script.js"></script>`).
   * There is now a `BundlePathService` service that allows programatic access to the `bundle.path` (e.g. `img.src = require('br.bundle-path-service').getPath() + 'unbundled-resources/my-image.png'`).
-
-
-#### 6. The `SourceModule.getClassname()` method has been deleted.
-
-Since the class-names and require-paths are freely convertible between each other by replacing dots with slashes, it's no longer a requirement for `SourceModule` to provide a method for what can be done internally by the model.
-
-
-#### 7. `ContentPlugin.getGroupName()` method renamed to `ContentPlugin.getCompositeGroupName()`
-
-This has been done to make its purpose clearer now that we no longer create static bundles for content plug-ins that provide a non `null` return value for this method.
-
-
-#### 8. The 'import-app' and 'export-app' commands have been temporarily disabled 
-
-Because the 'import-app' command has not yet been modified to use the BRJS model, it no longer works due to underlying changes we've recently made. We have therefore taken the decision to disable both of these commands until they can both be used again.
-
