Added some extra items to the release notes based on the list of issues we've closed for this release.

--- a/releases/v0.9.md
+++ b/releases/v0.9.md
@@ -2,8 +2,10 @@
 - The majority of the work to allow applications to be deployed as a set of static files has now been completed.
 - Lots of fixes to substantially reduce the amount of memory BRJS consumes.
 - All application libraries now reside within a single directory, rather than needing to have separate 'thirdparty-libraries' and 'libs' directories.
+- All BRJS libraries now begin with a 'br-' prefix to help prevent naming clashes with the libraries developers add on their own machines.
 - The number of libraries required in each applications 'WEB-INF/lib' directory has now substantially decreased.
 - A separate model is no longer created for each application instance, and instead a single model instance is shared by the `serve` command, and all application instances.
+- All the locales are now available again when running against a deployed app in production.
 - We no longer scan comments within HTML and XML assets when looking for source module dependencies.
 - The web server now shows internal exceptions to the developer to aid debugging.
 - We no longer create static bundles for content plug-ins whose bundles are also available via a composite content plug-in bundle.
@@ -11,9 +13,12 @@
 - Fixed a bug that prevented requests within non-default aspects.
 - A number of bugs have been fixed regarding which resources are pulled in when a source module is required.
 - Fixed a bug where CSS files were incorrectly being identified as locale specific CSS files.
+- Fixed a bug that prevented CSS files from being able to have underscores in their name.
 - Fixed a bug that was preventing workbench pages from being able to reference images.
 - Standardized the content path-prefixes used by content plug-ins so that the bundles created by content plug-ins now always live within a plug-in specific directory.
+- We now include all of the testing dependencies required for plug-in developers to write spec tests.
 - The 'View in workbench' button now opens the workbench in a new tab rather than within a frame, since developers always immediately popped workbenches out to separate frames anyway.
+- We now prevent files from being loaded using the web server in development (using a 404 error), given that these files won't be available in production.
 
 
 ### Compatibility Issues
