Added missing bug fix to 0.9 release notes.

--- a/releases/v0.9.md
+++ b/releases/v0.9.md
@@ -14,6 +14,7 @@
 - A number of bugs have been fixed regarding which resources are pulled in when a source module is required.
 - Fixed a bug where CSS files were incorrectly being identified as locale specific CSS files.
 - Fixed a bug that prevented CSS files from being able to have underscores in their name.
+- Fixed a bug that caused additional CSS resources to be pulled in for non-default aspects.
 - Fixed a bug that was preventing workbench pages from being able to reference images.
 - Standardized the content path-prefixes used by content plug-ins so that the bundles created by content plug-ins now always live within a plug-in specific directory.
 - We now include all of the testing dependencies required for plug-in developers to write spec tests.
