added release note to cover removal of base tag from aspect index.html template

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -14,3 +14,7 @@ Not doing this was awkward for some of the methods, and it was better to instead
 
 Any changes made to the older `bladerunner.conf` file should be transferred to `brjs.conf`.
 You are safe to delete `bladerunner.conf` once this has been done, no behaviour has changed, just the name of the config file.
+
+#### 4. index pages should no longer have base tags
+
+Previously, the index.html in aspects were generated with a base tag containing the app version number, these should be removed.
