added release note for #671

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -1,5 +1,6 @@
 ## BladeRunnerJS @tagVersion@
 - JNDI token support for WAR files build with BRJS
+- Fixed bug where Presenter templates caused an extra <div/> to be added
 
 ### Compatibility Issues
 
