--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -1,6 +1,7 @@
 ## BladeRunnerJS @tagVersion@
 - JNDI token support for WAR files build with BRJS
 - Fixed bug where Presenter templates caused an extra <div/> to be added
+- css files can now be localised
 
 ### Compatibility Issues
 
