adding the apidocs links to release notes

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -3,6 +3,9 @@
 - Fixed bug where Presenter templates caused an extra <div/> to be added
 - css files can now be localised
 
+- [JavaScript API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/js/)
+- [Java Model API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/java/)
+
 ### Compatibility Issues
 
 #### 1. The PluginAccessor method names for accessing plug-ins have been renamed to always have work 'Plugin' appear within them.
