added release notes for #777

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -2,6 +2,8 @@
 - JNDI token support for WAR files build with BRJS
 - Fixed bug where Presenter templates caused an extra <div/> to be added
 - css files can now be localised
+- BRJS now uses jsdoc toolkit version 3
+- The jsdoc template can now be overriden in the generated jsdoc folder for each app
 
 - [JavaScript API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/js/)
 - [Java Model API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/java/)
