checking in current state of v0.10 release notes

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -1,12 +1,40 @@
 ## BladeRunnerJS @tagVersion@
-- JNDI token support for WAR files build with BRJS
-- Fixed bug where Presenter templates caused an extra <div/> to be added
-- css files can now be localised
-- BRJS now uses jsdoc toolkit version 3
-- The jsdoc template can now be overriden in the generated jsdoc folder for each app
 
-- [JavaScript API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/js/)
-- [Java Model API documentatiopn for @tagVersion@](http://apidocs.bladerunnerjs.org/@tagVersion@/java/)
+**Our first non 'pre-release' version**. We're still not at 1.0 yet, but we're getting close. See the [roadmap](http://bladerunnerjs.org/docs/roadmap/) for what's coming up.
+
+### Overview
+
+- Huge performance improvements for apps with 1000+ JavaScript files
+- Improved logging
+    - Fixed various bugs where logging didn't make it to the console
+    - Removed a lot of unneccessary logging
+    - Added `--show-pkg` and `--pkg` flags to allow better control of the logs messages displayed
+- The seperate mechanisms for console output and logging have been merged
+    - This adds a new `console` log level
+- BRJS now replaces an `@appVersion@` token when building a WAR
+- Added a `br.locale-service` which can be used to get and set the current app locale
+- Fixed a bug where spaces in CSS assets filenames weren't properly encoded
+- Fixed a bug where the CSS tag handler was generating requests for all app locales
+- CSS styles can now refer to assets in any directory
+- Re-adding JNDI token support
+    - This currently only applies to apps built as WARs. Support for environmental specific token replacement is yet to be added (https://github.com/BladeRunnerJS/brjs/issues/749)
+- Apps will now fail to load if an invalid locale is used
+    - This prevents a difference in behaviour between 'prod' and 'dev' environments.
+- JSPs can now be used in `unbundled-resources` and can also send redirects and other reponse headers (WAR only).
+    - Note: We recommend using servlets rather than JSPs for dynamic content.
+- Content plugins can now define unversioned content URLs by prefixing their URLs with a /.
+- Dependencies in inline maps used within NamespacedJS source files are correctly detected
+- Fixed a bug where XML files were truncated if a comment spanned a buffer
+- The `presenter` library no longer adds extra `<div>` tags
+- Removed `JAVA_OPTS` from the BRJS command. Developers are now responsible for defining the memory usage if the OS defaults are not sufficient.
+- Blades without any source code can still be bundled if any of their XML or HTML is used. This allows 'view template' only blades.
+- The XML bundler now supports merging of XML elements  that don't have IDs.
+- Fixed a number of file locking issues in Windows
+- `bladerunner.conf` has been renamed to `brjs.conf`
+- `exports: {}` is no longer mandatory in 'Thirdparty' library manifests
+- A `@bundlePath@` token can be used in HTML/XML which will be replaced with the bundle path for the app (e.g. '../v/1234')
+- API docs are now available at http://apidocs.bladerunnerjs.org
+- Various API improvements have been made, particularly around ContentPlugins, to improve performance and usage
 
 ### Compatibility Issues
 
