Some minor improvements to the release notes.

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -22,34 +22,23 @@
     - This prevents a difference in behaviour between 'prod' and 'dev' environments.
 - JSPs can now be used in `unbundled-resources` and can also send redirects and other reponse headers (WAR only).
     - Note: We recommend using servlets rather than JSPs for dynamic content.
-- Content plugins can now define unversioned content URLs by prefixing their URLs with a /.
-- Dependencies in inline maps used within NamespacedJS source files are correctly detected
-- Fixed a bug where XML files were truncated if a comment spanned a buffer
-- The `presenter` library no longer adds extra `<div>` tags
+- Content plugins can now define unversioned content URLs by prefixing their URLs with a `/`.
+- Dependencies in inline maps used within NamespacedJS source files are correctly detected.
+- Fixed a bug where XML files were truncated if a comment spanned multiple read buffers.
+- The `presenter` library no longer adds extra `<div>` tags.
 - Removed `JAVA_OPTS` from the BRJS command. Developers are now responsible for defining the memory usage if the OS defaults are not sufficient.
 - Blades without any source code can still be bundled if any of their XML or HTML is used. This allows 'view template' only blades.
 - The XML bundler now supports merging of XML elements  that don't have IDs.
-- Fixed a number of file locking issues in Windows
-- `bladerunner.conf` has been renamed to `brjs.conf`
-- `exports: {}` is no longer mandatory in 'Thirdparty' library manifests
+- Fixed a number of file locking issues in Windows.
+- `bladerunner.conf` has been renamed to `brjs.conf`.
+- `exports: {}` is no longer mandatory in 'Thirdparty' library manifests.
 - A `@bundlePath@` token can be used in HTML/XML which will be replaced with the bundle path for the app (e.g. '../v/1234')
-- API docs are now available at http://apidocs.bladerunnerjs.org
-- Various API improvements have been made, particularly around ContentPlugins, to improve performance and usage
+- API docs are now available at <http://apidocs.bladerunnerjs.org>.
+- Various API improvements have been made, particularly around the `ContentPlugin` interface, to improve performance and usage.
 
 ### Compatibility Issues
 
-#### 1. The PluginAccessor method names for accessing plug-ins have been renamed to always have work 'Plugin' appear within them.
+#### 1. The `ContentPlugin` interface has changed to make BRJS more performant.
 
-Not doing this was awkward for some of the methods, and it was better to instead provide a consistent set of method names.
+`ContentPlugin.writeContent()` has been replaced by `ContentPlugin.handleRequest()`, which ???.
 
-
-#### 2. The spec test commands for creating and automatically finding plug-ins have been renamed to make them more self consistent.
-
-#### 3. `conf/bladerunner.conf` will now be generated as `conf/brjs.conf`
-
-Any changes made to the older `bladerunner.conf` file should be transferred to `brjs.conf`.
-You are safe to delete `bladerunner.conf` once this has been done, no behaviour has changed, just the name of the config file.
-
-#### 4. index pages should no longer have base tags
-
-Previously, the index.html in aspects were generated with a base tag containing the app version number, these should be removed.
