adding some compatability info to release notes

--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -9,7 +9,7 @@
     - Fixed various bugs where logging didn't make it to the console
     - Removed a lot of unneccessary logging
     - Added `--show-pkg` and `--pkg` flags to allow better control of the logs messages displayed
-- The seperate mechanisms for console output and logging have been merged
+- The separate mechanisms for console output and logging have been merged
     - This adds a new `console` log level
 - BRJS now replaces an `@appVersion@` token when building a WAR
 - Added a `br.locale-service` which can be used to get and set the current app locale
@@ -32,6 +32,7 @@
 - Fixed a number of file locking issues in Windows.
 - `bladerunner.conf` has been renamed to `brjs.conf`.
 - `exports: {}` is no longer mandatory in 'Thirdparty' library manifests.
+- Removed the character encoding filter since character encoding can be set for an app via the `<meta charset=...>` tag
 - A `@bundlePath@` token can be used in HTML/XML which will be replaced with the bundle path for the app (e.g. '../v/1234')
 - API docs are now available at <http://apidocs.bladerunnerjs.org>.
 - Various API improvements have been made, particularly around the `ContentPlugin` interface, to improve performance and usage.
@@ -40,5 +41,12 @@
 
 #### 1. The `ContentPlugin` interface has changed to make BRJS more performant.
 
-`ContentPlugin.writeContent()` has been replaced by `ContentPlugin.handleRequest()`, which ???.
+Content plugins have change so rather than writing their content to an `OutputStream` or `Writer` they make it available via a `Reader` or an `InputStream`. This means the `ContentPlugin.writeContent()` definition has been replaced by the following  `ResponseContent handleRequest(ParsedContentPath contentPath, BundleSet bundleSet, UrlContentAccessor contentAccessor, String version) throws ContentProcessingException;`.
 
+#### 2. The ConsoleOutput and Logger functionality has been combined
+
+The previous console output mechanism has been removed and instead been replaced by an extra `console` method on the `Logger` interface. There is also a `println` method on the same interface which is an alias to the `console` method.
+
+#### 3. The bladerunner.conf file has been renamed to brjs.conf
+
+The config file used to set the BRJS port and character encoding has been renamed to `brjs.conf`. A new file will be created when BRJS is upgraded, if you have modified any of the default values you will need to copy these across to the new file
