--- a/releases/v0.10.md
+++ b/releases/v0.10.md
@@ -8,7 +8,7 @@
 - Improved logging
     - Fixed various bugs where logging didn't make it to the console
     - Removed a lot of unneccessary logging
-    - Added `--show-pkg` and `--pkg` flags to allow better control of the logs messages displayed
+    - Added `--show-pkg` and `--pkg` flags to allow better control of the log messages displayed
 - The separate mechanisms for console output and logging have been merged
     - This adds a new `console` log level
 - BRJS now replaces an `@appVersion@` token when building a WAR
@@ -41,7 +41,7 @@
 
 #### 1. The `ContentPlugin` interface has changed to make BRJS more performant.
 
-Content plugins have change so rather than writing their content to an `OutputStream` or `Writer` they make it available via a `Reader` or an `InputStream`. This means the `ContentPlugin.writeContent()` definition has been replaced by the following  `ResponseContent handleRequest(ParsedContentPath contentPath, BundleSet bundleSet, UrlContentAccessor contentAccessor, String version) throws ContentProcessingException;`.
+Content plugins have changed so rather than writing their content to an `OutputStream` or `Writer` they make it available via a `Reader` or an `InputStream`. This means the `ContentPlugin.writeContent()` definition has been replaced by the following  `ResponseContent handleRequest(ParsedContentPath contentPath, BundleSet bundleSet, UrlContentAccessor contentAccessor, String version) throws ContentProcessingException;`.
 
 #### 2. The ConsoleOutput and Logger functionality has been combined
 
