updated release notes

--- a/releases/v0.11.md
+++ b/releases/v0.11.md
@@ -2,6 +2,8 @@
 
 ### Overview
 
+- We have upgraded to jsdoc toolkit version 3.
+
 ### Compatibility Issues
 
 #### 1. The export-app command no longer removes dot files by default, you will need to add files you do not wish to export to the ignorepaths in brjs.conf
