--- a/releases/v0.11.md
+++ b/releases/v0.11.md
@@ -3,6 +3,7 @@
 ### Overview
 
 - We have upgraded to jsdoc toolkit version 3.
+- Moment js has been upgraded to v2.4.0
 
 ### Compatibility Issues
 
