--- a/releases/v0.11.md
+++ b/releases/v0.11.md
@@ -3,7 +3,7 @@
 ### Overview
 
 - The `../` prefix has now been removed from all asset/bundle URLs by using a dynamic base tag which is added by including `<@base.tag@/>` in all Aspects and Workbenchs. This is a breaking change from v0.10 to v0.11, see below for more information
-- JSDoc toolkit has been updated to v3 and the BRHS JsDoc command is now more configurable
+- JSDoc toolkit has been updated to v3 and the BRJS JsDoc command is now more configurable
  - We have upgrade to v3.3.0-alpha9, this will be updated to a final 3.3.0 version as soon as it is released
  - The version of JsDoc toolkit used by the command can be overridden by copying the new version of JsDoc toolkit into `conf/jsdoc-toolkit`
  - The JSDoc configuration used by the command can be overridden by creating a `conf/jsdoc-conf.json` file. The default configuration used by BRJS can be copied from `sdk/jsdoc-toolkit-resources/jsdoc-conf.json`
