moving compatability issue to the correct release note

--- a/releases/v0.12.md
+++ b/releases/v0.12.md
@@ -8,3 +8,9 @@
 
 Previously if we had a require prefix of myapp/mynamespace, alias names such as 'myapp.mynamespace-mystuff' was supported. However it 
 will now need to be named 'myapp.mynamespace.mystuff' or an exception will be thrown at runtime.
+
+#### 2. '.js-style' file contents have changed
+The 'node.js' token has now been renamed to 'common-js'. There are now two built-in JavaScript styles provided:
+
+  * `common-js`
+  * `namespaced-js`
